TEIID-224: making error reporting less verbose during the connect and shutdown.