@@ -61,7 +61,8 @@ if [ "x$JAVA" = "x" ]; then
 fi
 
 TEIID_CLASSPATH="$TEIID_HOME/lib/patches/*:$TEIID_HOME/lib/*"
-
+JAVA_OPTS="$JAVA_OPTS -Xms128m -Xmx256m -XX:MaxPermSize=256m"
+JAVA_OPTS="$JAVA_OPTS -Djava.util.logging.config.file=log.properties"
 
 # Print the env settings
 echo "========================================================================="
@@ -75,4 +76,4 @@ echo ""
 echo "========================================================================="
 echo ""
 
-$JAVA -cp $TEIID_CLASSPATH -Xmx256m  org.teiid.AdminShell $*
+$JAVA $JAVA_OPTS -cp $TEIID_CLASSPATH -Xmx256m  org.teiid.AdminShell $*
